--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,15 +32,15 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
-                         About
-                         </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
-                         </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Projects
-                         </a>
+                      <a class="btn zoombtn" href="{{ site.url }}/posts">
+                          日志
+                      </a>
+                      <a class="btn zoombtn" href="{{ site.url }}/projects">
+                          参与项目
+                      </a>
+                      <a class="btn zoombtn" href="{{ site.url }}/about">
+                         关于博主
+                      </a>
                  </h3>
             </div>
         </div>
