--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,12 +33,13 @@ layout: compress
                     </a>
                 </div>
                 {{ content }}
+                {% if site.duoshuo_shortname %}
                 <div class="entry-meta">
-                {% include meta.html %}
+                {% include duoshuo.html %}
                 </div>
+                {% endif %}
             </div>
         </div>
-        {% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section><!-- /#disqus_thread -->{% endif %}
     </header>
     {% include scripts.html %}
     {% if site.mathjax == true %}
